--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div>
                             <h4>Contact</h4>
                             <p>+91 8318163427, +91 9305092028</p>
-                            <p>saugatrestaraut@gmail.com</p>
+                            <p>saugatrestaraunt@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -187,5 +187,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
