--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
             <button class="mobile-menu-btn" aria-label="Toggle Menu">
                 <i class="fas fa-bars"></i>
             </button>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact" class="btn-primary">Contact Us</a></li>
-            <li>
-                <a href="#" id="cart-btn" class="cart-icon">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span id="cart-count" class="cart-badge">0</span>
-                </a>
-            </li>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact" class="btn-primary">Contact Us</a></li>
+                <li>
+                    <a href="#" id="cart-btn" class="cart-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span id="cart-count" class="cart-badge">0</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -132,7 +133,7 @@
                         <div>
                             <h4>Contact</h4>
                             <p>+91 8318163427, +91 9305092028</p>
-                            <p>saugatrestaraunt@gmail.com</p>
+                            <p>saugatrestaraut@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -187,6 +188,5 @@
         </div>
     </div>
 </body>
-
 
 </html>
