--- a/index.html
+++ b/index.html
@@ -133,7 +133,14 @@
                         <div>
                             <h4>Contact</h4>
                             <p>+91 8318163427, +91 9305092028</p>
-                            <p>saugatrestaraut@gmail.com</p>
+                            <p>saugatrestaurant@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-user-tie"></i>
+                        <div>
+                            <h4>Owner</h4>
+                            <p> Danish Pervez</p>
                         </div>
                     </div>
                 </div>
